--- a/app/views/churches/directory.html.erb
+++ b/app/views/churches/directory.html.erb
@@ -13,14 +13,14 @@
 	<!-- moved members are marked as 'Non-Attending' -->
 	<%= render :partial => 'member_pages_and_matrices', :locals => { :title => "#{@church.short_name_prioritized} Members Out of Area as of #{Date.today.strftime('%B %-d, %Y')}", :memberlist => @church.non_attending_members, :rows_per_page => @rows_per_page, :cols_per_page => @cols_per_page, :show_details => true, :out_of_area => true } %>
 	
-	<div class="members-page" id="members-page-households" style="min-height: 1000px;">
+	<div class="members-page" id="members-page-households">
 		<h2><%= @church.short_name_prioritized %> Households and Children</h2>
 
 		<table id="households-listing" style="">
 			<tr>
 				<td valign="top" align="left">
 		<% @hh_lines_iter = 0 -%>
-		<% @hh_lines_per_col = 60 -%>
+		<% @hh_lines_per_col = 45 -%>
 		<% @church.sorted_households.each do |hh| %>
 		 <% unless hh[:children].empty? %>
 		
